--- a/Preload_Structure/readme
+++ b/Preload_Structure/readme
@@ -1,1 +1,7 @@
-In this folder, you can add costomized structures or use existing ones. 
+In this folder, you can add customized structures or use existing ones.
+
+There are two ways to create a new layer structure: One is to do it directly in the UI,
+another one is to create or modify the .csv files in this folder.
+
+Everyone are more than welcome to upload useful structures to this folder.
+Please put your initial at the end of the file name.
